<resources>
    <string name="app_name">WeatherDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather">Weather : %1$s</string>
    <string name="description">Description : %1$s</string>
    <string name="sunrise">Sunrise : %1$s</string>
    <string name="sunset">Sunset : %1$s</string>
    <string name="temp">Temp : %1$s</string>
    <string name="feels_like">Feels like : %1$s</string>
</resources>